added css for extension length, added match links on manifest, finalized main use of extension

--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="popup.css">
     <title>test</title>
 </head>
 <body>
-    <h5>BoilerPlate</h5>
-    <button id="convertButton">Convert Schedule to .ics File</button>
+    <div class="popup-container">
+        <h2>PUPSIS-Schedule-Exporter</h2>
 
-    <div id="alert-box">
-        <div id="display-box">
+        <!-- <label for="dateInput">Select end date of recurring schedule:</label>
+        <input type="date" id="dateInput" name="dateInput"> -->
+        <br>
 
+        <button id="convertButton">Convert to .ics</button>
+        <div id="alert-box">
+            <div id="display-box">
+
+            </div>
         </div>
     </div>
 
