transferred styling to popup.css

--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -4,82 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
-    <title>test</title>
+    <link rel="stylesheet" type="text/css" href="popup.css">
+    <title>PUPSIS-Schedule-Exporter</title>
 </head>
-<style>
-
-    *{
-        font-family: 'Kanit', sans-serif;
-        margin: 0 auto;
-        padding: 0;
-    }
-
-    .popup-container{
-        width: 260px;
-        height: 130px;
-        padding: 10px 15px 10px 15px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        background-color: #39373c;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23ffffff' fill-opacity='0.18' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-    }
-
-    .pop-title{
-        color: white;
-        text-align: center;
-        font-size: 20px;
-    }
-
-    #convertButton {
-        align-items: center;
-        appearance: none;
-        background-color: #FCFCFD;
-        border-radius: 4px;
-        border-width: 0;
-        box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-        box-sizing: border-box;
-        color: #36395A;
-        cursor: pointer;
-        display: inline-flex;
-        font-family: "JetBrains Mono",monospace;
-        height: 35px;
-        justify-content: center;
-        line-height: 1;
-        list-style: none;
-        overflow: hidden;
-        padding-left: 16px;
-        padding-right: 16px;
-        position: relative;
-        text-align: left;
-        text-decoration: none;
-        transition: box-shadow .15s,transform .15s;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-        white-space: nowrap;
-        will-change: box-shadow,transform;
-    }
-
-    #convertButton {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    }
-
-    #convertButton:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
-    }
-
-    #convertButton:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
-    }
-
-    .btn-txt{
-        font-size: px;
-    }
-
-</style>
 <body>
     <div class="popup-container">
         
@@ -98,4 +25,3 @@
     <script src="popup.js"></script>
 </body>
 </html>
-
