added endDate of recurring schedule feature, improved css styling, added TODO list on readme

--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -8,19 +8,21 @@
     <title>PUPSIS-Schedule-Exporter</title>
 </head>
 <body>
-    <div class="popup-container">
-        
-        <h2 class="pop-title">PUPSIS-Schedule-Exporter</h2>
-        <!-- <label for="dateInput">Select end date of recurring schedule:</label>
-        <input type="date" id="dateInput" name="dateInput"> -->
-        <br>
-
-        <button id="convertButton"><span class="btn-txt">Convert to .ics</span></button>
+    <div class="html-container">
+        <div class="popup-container">
+            
+            <h2 class="pop-title">PUPSIS-Schedule-Exporter</h2>
+            <label for="dateInput"> <p class="label-text">Select end date of recurring schedule: <br> 4 months default </p></label>
+            <input type="date" id="dateInput" name="dateInput">
+            <br>
+            <button id="convertButton"><span class="btn-txt">Convert to .ics</span></button>
+        </div>
         <div id="alert-box">
             <div id="display-box">
             </div>
         </div>
     </div>
+
 
     <script src="popup.js"></script>
 </body>
