changed web icon, added attribute on web icon

--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -17,12 +17,15 @@
             <br>
             <button id="convertButton"><span class="btn-txt">Convert to .ics</span></button>
         </div>
-        <div id="alert-box">
+
             <div id="display-box">
+
             </div>
+        <div class="tail">
+            <a href="https://www.flaticon.com/free-icons/plugins" title="plugins icons" id="plugin">Plugins icon created by juicy_fish - Flaticon</a>
         </div>
     </div>
-
+    
 
     <script src="popup.js"></script>
 </body>
