made default value setter function and some styling adjustments

--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -10,11 +10,12 @@
 <body>
     <div class="html-container">
         <div class="popup-container">
-            
             <h2 class="pop-title">PUPSIS-Schedule-Exporter</h2>
-            <label for="dateInput"> <p class="label-text">Select end date of recurring schedule: <br> 4 months default </p></label>
-            <input type="date" id="dateInput" name="dateInput">
-            <br>
+            <hr class="separator">
+            <div class="date-input-container">
+                <label for="dateInput"> <p class="label-text">Select end date of recurring schedule:</p></label>
+                <input type="date" id="dateInput" name="dateInput">
+            </div>
             <button id="convertButton"><span class="btn-txt">Convert to .ics</span></button>
         </div>
 
