--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -16,7 +16,14 @@
                 <label for="dateInput"> <p class="label-text">Select end date of recurring schedule:</p></label>
                 <input type="date" id="dateInput" name="dateInput">
             </div>
-            <button id="convertButton"><span class="btn-txt">Convert to .ics</span></button>
+            <div class="convert-container">
+                <button id="convertButton"><span class="btn-txt">Convert to</span></button>
+                <select name="file-type" id="fileType">
+                    <option value="ics" selected>.ics</option>
+                    <option value="csv">.csv</option>
+                </select>
+            </div>
+            
         </div>
 
             <div id="display-box">
