--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -22,7 +22,7 @@
                     <option value="ics" selected>.ics</option>
                     <option value="csv">.csv</option>
                     <!-- add once function in popup.js is finished -->
-                    <!-- <option value="json">.json</option> -->
+                    <option value="json">.json</option>
                 </select>
             </div>
             
