--- a/web-extension/src/edit.html
+++ b/web-extension/src/edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="edit.css">
+    <link rel="stylesheet" href="./css/edit.css">
     <title>Edit schedule</title>
 </head>
 <body>
