--- a/web-extension/src/popup.html
+++ b/web-extension/src/popup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="popup.css">
+    <link rel="stylesheet" type="text/css" href="./css/popup.css">
     <title>PUPSIS-Schedule-Exporter</title>
 </head>
 
